--- a/index.html
+++ b/index.html
@@ -9,46 +9,53 @@ text{
         font-size:13px;
         pointer-events:none;
     }
-    #chart{
-        position:absolute;
-        width:500px;
-        height:500px;
+#chart{
+    position:absolute;
+    width:500px;
+    height:500px;
 /*         top:0; */
-        top:calc((100vh - 500px)/2);
+    top:calc((100vh - 500px)/2);
 /*         left:0; */
-        left:calc(-500px);
-        right:0;
-        margin:auto;
-        cursor:pointer;
-    }
-    #question{
-        position: fixed;
-        width:45vw;
-        height:100vh;
-        top:0;
-        right:0px;
-    }
-    #question h1{
-        font-size: 50px;
-        font-weight: bold;
-        font-family: rainyhearts;
-        position: absolute;
-        cursor:pointer;
-        padding: 0;
-        margin: 0;
-        top:calc((100vh)/2 - 5px);
+    left:calc(-500px);
+    right:0;
+    margin:auto;
+    cursor:pointer;
+}
+#question{
+    position: fixed;
+    width:45vw;
+    height:100vh;
+    top:0;
+    right:0px;
+}
+#question h1{
+    font-size: 50px;
+    font-weight: bold;
+    font-family: rainyhearts;
+    position: absolute;
+    cursor:pointer;
+    padding: 0;
+    margin: 0;
+    top:calc((100vh)/2 - 5px);
 /*         top:50.5%; */
-        -webkit-transform:translate(0,-50%);
-                transform:translate(0,-50%);
-    }
+    -webkit-transform:translate(0,-50%);
+            transform:translate(0,-50%);
+}
 </style>
 
 
+  </head>
+
+  <body>
+      <div id="chart"></div>
+    <div id="question"><h1></h1></div>
+    </div>
 
 
-    <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <script src="./d3.js" type="text/javascript"></script>
   
-    <script type="text/javascript" charset="utf-8">
+
+    <script lang="text/javascript">
         var padding = {top:0, right:0, bottom:0, left:0},
             w = 500 - padding.left - padding.right,
             h = 500 - padding.top  - padding.bottom,
@@ -208,13 +215,7 @@ text{
 
     </script> 
 
-
-  </head>
-
-  <body>
-      <div id="chart"></div>
-    <div id="question"><h1></h1></div>
-    </div>
+    
   </body>
 
 </html>
